@@ -22,6 +22,8 @@ Bugs:
 * #1000 - Fix header parameter parsing (such as attachment names) to transcode to UTF-8 (kjg)
 * #1003 - Fix decoding some b encoded headers on specific rubies that don't account for lack of base64 padding (kjg)
 * #1023 - Fix double-quoting in display names. (garethrees)
+* #1032 - Fix that comparing messages changed their raw Message-ID to their
+parsed message_id. (bobjflong)
 * #1074 - Fix that the first address in a list is dropped when a subsequent address has non-US-ASCII characters. (domininik)
 
 == Version 2.6.4 - Wed Mar 23 08:16 -0700 2016 Jeremy Daer <jeremydaer@gmail.com>
